--- a/src/app/pages/content/editar-departamento/editar-departamento.css
+++ b/src/app/pages/content/editar-departamento/editar-departamento.css
@@ -24,6 +24,14 @@
   padding: 2rem;
 }
 
+.carga {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
 form {
   width: 80vw;
   display: flex;
