--- a/src/app/pages/content/editar-empleado/editar-empleado.css
+++ b/src/app/pages/content/editar-empleado/editar-empleado.css
@@ -15,6 +15,14 @@
   width: 80vw;
 }
 
+.carga {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
 .content {
   display: flex;
   flex-direction: column;
