--- a/src/app/shared/components/coordinadores-list/coordinadores-list.html
+++ b/src/app/shared/components/coordinadores-list/coordinadores-list.html
@@ -1,10 +1,18 @@
 <div class="coordinadores-container">
-    <div class="datos-coordinador">
-        <h3 class="nombre-usuario">@{{coordinador.usuario}}</h3>
-        <h3>{{coordinador.nombre}} {{coordinador.apellidos}}</h3>
-    </div>
-    <div class="botones-container">
-        <button class="btn btn-outline-dark" [routerLink]="['/empleados/editarCoordinador', coordinador.id_coordinador! ]"><i class="fa-solid fa-pen-to-square"></i></button>
-        <button class="btn btn-outline-danger"><i class="fa-solid fa-user-xmark"></i></button>
-    </div>
+  <div class="datos-coordinador">
+    <h3 class="nombre-usuario">@{{ coordinador.usuario }}</h3>
+    <h3>{{ coordinador.nombre }} {{ coordinador.apellidos }}</h3>
+  </div>
+  <div class="botones-container">
+    <button class="btn btn-outline-dark" (click)="cambiarPass(coordinador.id_coordinador!)">
+      <i class="fa-solid fa-key"></i>
+    </button>
+    <button
+      class="btn btn-outline-dark"
+      [routerLink]="['/empleados/editarCoordinador', coordinador.id_coordinador!]"
+    >
+      <i class="fa-solid fa-pen-to-square"></i>
+    </button>
+    <button class="btn btn-outline-danger"><i class="fa-solid fa-user-xmark"></i></button>
+  </div>
 </div>
